--- a/front-end/src/app/features/auth-module/login/login.component.css
+++ b/front-end/src/app/features/auth-module/login/login.component.css
@@ -17,7 +17,7 @@ a {
 
 .left {
     background-color: rgb(212, 212, 212);
-    height: 2px;
+    height: 1px;
     width: 110px;
 }
 
@@ -29,3 +29,22 @@ a {
     font-size: 14px;
     font-weight: 400;
 }
+
+.fb-link {
+    display: flex;
+    /* background-color: lightblue; */
+}
+
+.signup {
+    /* background-color: lightblue; */
+    padding: 20px;
+    margin-top: 10px;
+    margin-right: 160px;
+    border: 1px solid rgb(212, 212, 212);
+    width: 340px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
