--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -3,3 +3,6 @@
 /* styles.css */
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
