--- a/front-end/src/app/features/home-module/home-page/home-page.component.html
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<div class="home d-flex flex-row align-items-center justify-content-center">
+    <app-nav-bar></app-nav-bar>
+    <router-outlet style="margin-left: 300px;" name="primary"></router-outlet>
+</div>
