--- a/front-end/src/app/shared/nav-bar/nav-bar.component.css
+++ b/front-end/src/app/shared/nav-bar/nav-bar.component.css
@@ -9,6 +9,10 @@
     width: 240px;
     z-index: 600;
     }
+
+    a:hover {
+        cursor: pointer;
+    }
     
     @media (max-width: 991.98px) {
     .sidebar {
