--- a/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.css
+++ b/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.css
@@ -7,11 +7,16 @@ main {
     flex: 1;
 }
 
+.heading {
+    text-align: start;
+    width: 800px;
+}
+
 .profileImg {
     width: 800px;
     padding: 20px;
     background-color: rgb(232, 232, 232);
-    display: flex;;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 10px;
@@ -28,10 +33,10 @@ main {
     width: 100%;
 }
 
-.website input{
+.website input {
     width: 800px;
     padding: 10px;
     border: none;
-    background-color: rgb(232, 232, 232);
+    background-color: rgb(243, 243, 243);
     border-radius: 10px;
 }
