--- a/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
@@ -1,23 +1,36 @@
 <main class="mt-5">
-    <div class="my-3">
+    <div class="mb-4 heading">
         <h4>Edit profile</h4>
     </div>
-    <div class="profileImg">
-        <div class="image d-flex align-items-center ">
-            <div class="img me-4">
-                <img class="rounded-circle" src="../../../../../assets/auth/124010.webp" alt="">
+    <form action="" #profileEdit="ngForm">
+        <div class="profileImg">
+            <div class="image d-flex align-items-center ">
+                <div class="img me-4">
+                    <!-- <img class="rounded-circle" src="../../../../../assets/auth/124010.webp" alt=""> -->
+                    <img class="rounded-circle" src="{{profileImg}}" alt="">
+                </div>
+                <div class="username" style="line-height: 2px;">
+                    <p>{{fullName}}</p>
+                    <p>{{userName}}</p>
+                </div>
             </div>
-            <div class="username" style="line-height: 2px;">
-                <p>name</p>
-                <p>username</p>
+            <div class="changeBtn">
+                <button class="btn btn-primary" (click)="imageUpdating()">Change photo</button>
             </div>
         </div>
-        <div class="changeBtn">
-            <button class="btn btn-primary">Change photo</button>
+        <div class="website">
+            <h6 class="mt-3 mb-3 heading">Website</h6>
+            <input type="text" placeholder="Website" name="links" ngModel>
         </div>
-    </div>
-    <div class="website">
-        <h6 class="mt-5 mb-3">Website</h6>
-        <input type="text" placeholder="Website">
-    </div>
+        <div class="website">
+            <h6 class="mt-3 mb-3 heading">Bio</h6>
+            <input type="text" placeholder="{{userBio}}" name="bio" ngModel>
+        </div>
+        <div class="website d-flex flex-column align-items-start" >
+            <h6 class="mt-3 mb-3 heading">Gender</h6>
+            <input type="text" placeholder="{{gender}}" value="{{gender}}" name="gender" ngModel>
+            <small class="mt-1" style="font-size: 12px;">This won’t be part of your public profile.</small>
+        </div>
+    </form>
+    <button class="mt-3 btn btn-primary" (click)="submit()">Submit</button>
 </main>
