--- a/front-end/src/app/shared/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/shared/nav-bar/nav-bar.component.html
@@ -4,10 +4,27 @@
     <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
         <div class="position-sticky">
             <div class="nav-options list-group list-group-flush mx-2 mt-3" *ngFor="let options of navigationItems">
-                <a [routerLink]="options.route" outlet="primary" class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
+                <a [routerLink]="options.route" outlet="primary"
+                    class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
                     aria-current="true">
                     <img style="width: 25px;" src="{{options.icon}}" alt="">
                     <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>{{options.title}}</span>
+                </a>
+            </div>
+            <div class="nav-options list-group list-group-flush mx-2 mt-3">
+                <a (click)="addPost()" outlet="primary"
+                    class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
+                    aria-current="true">
+                    <img style="width: 25px;" src="../../../assets/side-nav/create.png" alt="">
+                    <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Create</span>
+                </a>
+            </div>
+            <div class="nav-options list-group list-group-flush mx-2 mt-3">
+                <a [routerLink]="'/profile'" outlet="primary"
+                    class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
+                    aria-current="true">
+                    <img class="rounded-circle" style="width: 30px;" src="{{navProfilePic}}" alt="">
+                    <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Profile</span>
                 </a>
             </div>
         </div>
