--- a/front-end/src/app/features/home-module/home-page/home-page.component.html
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<div class="home d-flex flex-row align-items-center justify-content-center">
+<div class="home">
     <app-nav-bar></app-nav-bar>
-    <router-outlet style="margin-left: 300px;" name="primary"></router-outlet>
+    <router-outlet name="primary"></router-outlet>
 </div>
