--- a/front-end/src/app/features/home-module/user-profile/profile/profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/profile/profile.component.html
@@ -20,4 +20,21 @@
             </div>
         </div>
     </div>
+    <!-- <app-user-post></app-user-post> -->
+    <div class="userThings">
+        <button>
+            <span class="posts"></span>
+            POST
+        </button>
+        <button class="mx-5">
+            <span class="saved"></span>
+            SAVED
+        </button>
+        <button>
+            <span class="tagged"></span>
+            TAGGED
+        </button>
+    </div>
+    <!-- <router-outlet name="userThings"></router-outlet> -->
+    
 </main>
