--- a/front-end/src/app/features/home-module/story/story.component.html
+++ b/front-end/src/app/features/home-module/story/story.component.html
@@ -1,19 +1,3 @@
-<!-- <div class="container mt-3">
-    <div class="d-flex overflow-x-scroll scroll-stories">
-        <div class="story me-2" *ngFor="let story of stories">
-            <img [src]="story.imageUrl" alt="Story Image" class="img-fluid rounded-circle story-img">
-            <p class="story-username text-center mt-2">{{ story.userName }}</p>
-        </div>
-    </div>
-</div> -->
-
-<div class="container mt-3">
-    <h5>Stories</h5>
-    <div class="d-flex overflow-x-scroll scroll-stories">
-        <div class="story me-2" *ngFor="let story of stories">
-            <img [src]="story.profilePictureUrl" alt="Profile Picture" class="img-fluid rounded-circle story-img">
-            <div *ngIf="story.hasStory" class="story-ring"></div>
-            <p class="story-username text-center mt-2">{{ story.userName }}</p>
-        </div>
-    </div>
+<div class="main">
+    <!-- <h1>Story</h1> -->
 </div>
