--- a/front-end/src/app/shared/nav-bar/nav-bar.component.css
+++ b/front-end/src/app/shared/nav-bar/nav-bar.component.css
@@ -5,7 +5,7 @@
     bottom: 0;
     left: 0;
     padding: 58px 0 0; /* Height of navbar */
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+    box-shadow: 0 2px 5px 0 rgb(94, 94, 94), 0 2px 10px 0 rgba(255, 207, 207, 0.05);
     width: 240px;
     z-index: 600;
     }
