--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.css
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.css
@@ -68,6 +68,11 @@
     background-size: cover;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .liked {
     background-image: url('../../../../assets/post/liked.png');
 }
