--- a/front-end/src/app/shared/nav-bar/nav-bar.component.css
+++ b/front-end/src/app/shared/nav-bar/nav-bar.component.css
@@ -13,12 +13,12 @@
     a:hover {
         cursor: pointer;
     }
-    
+/*     
     @media (max-width: 991.98px) {
     .sidebar {
     width: 100%;
     }
-    }
+    } */
     .sidebar .active {
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
