--- a/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.html
+++ b/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.html
@@ -6,8 +6,8 @@
         <div class="userDetails">
             <div class="user-values d-flex align-items-start justify-content-between mb-2">
                 <p class="me-5" style="font-weight: 500;"> {{fullName}} </p>
-                <button class="me-4"  *ngIf="followBtn" (click)="followAndUnFollow()">{{ buttonType === 'follow' ? 'Follow' : 'Following' }} </button>
-                <!-- <button class="me-4" *ngIf="followBtn">Following</button> -->
+                <button *ngIf="followBtn" [ngClass]="{'class1': followBtnClass, 'class2':!followBtnClass}"
+                    (click)="followAndUnFollow()">{{ buttonType === 'follow' ? 'Follow' : 'Following' }} </button>
                 <button>Message</button>
             </div>
             <div class="user-status d-flex align-items-start justify-content-between">
