--- a/front-end/src/app/features/home-module/user-profile/profile/profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/profile/profile.component.html
@@ -11,8 +11,8 @@
             </div>
             <div class="user-status d-flex align-items-start justify-content-between">
                 <p>post</p>
-                <p>798followers</p>
-                <p>345following</p>
+                <p><span style="font-weight: bold;">{{followers}}</span> followers</p>
+                <p><span style="font-weight: bold;"> {{following}} </span> following</p>
             </div>
             <div style="line-height: 3px;" class="user-bio d-flex flex-column align-items-start justify-content-center">
                 <p>{{userName}}</p>
