--- a/front-end/src/app/features/home-module/home-page/home-page.component.css
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.css
@@ -6,3 +6,11 @@
     justify-content: center;
     /* align-items: center; */
 }
+
+/* .main {
+    display: flex;
+    align-items: center;
+    jus
+    background-color: lightblue;
+    width: 100%;
+} */
