--- a/front-end/src/app/features/home-module/home-page/home-page.component.html
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.html
@@ -1,4 +1,4 @@
 <div class="home">
     <app-nav-bar></app-nav-bar>
-    <router-outlet name="primary"></router-outlet>
+    <router-outlet class="main" name="primary"></router-outlet>
 </div>  
