--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.html
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.html
@@ -17,7 +17,8 @@
             <div class="postlike d-flex align-items-center justify-content-between mt-2" style="width: 110px;">
                 <div class="like">
                     <button (click)="likeBtn(item._id,item.postedBy._id)">
-                        <span [ngClass]="{'liked': liked}" class="like-icon"></span>
+                        <!-- <span [ngClass]="{'liked': likeIconChanging()}" class="like-icon"></span> -->
+                        <span class="like-icon"></span>
                     </button>
                 </div>
                 <div class="comments">
