--- a/front-end/src/app/features/auth-module/signup/signup.component.html
+++ b/front-end/src/app/features/auth-module/signup/signup.component.html
@@ -182,5 +182,5 @@
                     Have an account?</span><span style="color: blue;">Log in</span></button>
         </div>
     </section>
-
 </main>
+<app-footer class="container"></app-footer>
