--- a/front-end/src/app/shared/footer/footer.component.html
+++ b/front-end/src/app/shared/footer/footer.component.html
@@ -1,7 +1,17 @@
-<footer class="container">
+<footer class="container ">
     <div class="first">
         <a href="">Meta</a>
-        <a href="">Meta</a>
+        <a href="">About</a>
+        <a href="">Blog</a>
+        <a href="">Jobs</a>
+        <a href="">Help</a>
+        <a href="">API</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+        <a href="">Treads</a>
+        <a href="">Meta Verified</a>
     </div>
-    <div class="second"></div>
+    <div class="second mt-2">
+        <p><span>&#169; 2024 Instagram from Meta</span></p>
+    </div>
 </footer>
