--- a/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.css
+++ b/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.css
@@ -2,19 +2,28 @@ main {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: normal;
-    width: 500px;
+    max-width: 900px;
+    
 }
 
 .profile {
     margin-bottom: 220px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+a {
+    cursor: pointer;
 }
 
 .profileImg {
     /* overflow: hidden; */
-    margin-right: 60px;
+    margin-right: 100px;
     text-align: center;
-    width: 100px;
-    height: 100px;
+    width: 180px;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -61,6 +70,12 @@ main {
     border: none;
     background-color: white;
     color: rgb(201, 201, 201);
+}
+
+.userThings a {
+    color: rgb(201, 201, 201);
+    font-weight: 300;
+    cursor: pointer;
 }
 
 .posts,
