--- a/front-end/src/app/shared/footer/footer.component.css
+++ b/front-end/src/app/shared/footer/footer.component.css
@@ -1,7 +1,24 @@
 a {
     text-decoration: none;
-    color: rgb(198, 198, 198);
+    color: rgb(138, 138, 138);
     font-size: 12px;
+    font-weight: 500;
+}
+
+.first {
+    /* background-color: lightblue; */
     width: 100%;
-    background-color: lightblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container {
+    text-align: center;
+}
+
+span {
+    color: rgb(138, 138, 138);
+    font-size: 12px;
+    font-weight: 400;
 }
