--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.css
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.css
@@ -15,6 +15,10 @@
     /* box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2); */
 }
 
+.postCaption {
+    font-weight: bold;
+}
+
 .userDetails {
     width: 100px;
 }
