--- a/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div class="website">
-            <h6 class="mt-3 mb-3 heading">Website</h6>
-            <input type="text" placeholder="Website" name="links" ngModel>
+            <h6 class="mt-3 mb-3 heading">Username</h6>
+            <input type="text" name="username" ngModel>
         </div>
         <div class="website">
             <h6 class="mt-3 mb-3 heading">Bio</h6>
@@ -28,7 +28,7 @@
         </div>
         <div class="website d-flex flex-column align-items-start" >
             <h6 class="mt-3 mb-3 heading">Gender</h6>
-            <input type="text" placeholder="{{gender}}" value="{{gender}}" name="gender" ngModel>
+            <input type="text" placeholder="{{gender}}" value="{{gender}}" name="   " ngModel>
             <small class="mt-1" style="font-size: 12px;">This won’t be part of your public profile.</small>
         </div>
     </form>
