--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.html
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.html
@@ -1,50 +1,55 @@
 <div class="top mt-5">
-    <app-story></app-story>
+    <!-- <app-story></app-story> -->
     <div class="main mt-5">
-        <div class="main my-2" *ngFor="let item of allPosts">
-            <div class="userDetails mb-3 d-flex justify-content-between align-items-center">
-                <div class="profileImg me-3">
-                    <img [src]="item.postedBy.profilePic" alt="profileImg">
+        <form action="" #addCommentForm="ngForm">
+            <div class="postMain mt-3" *ngFor="let item of allPosts">
+                <div class="userDetails mb-2 d-flex justify-content-between align-items-center">
+                    <div class="profileImg me-2">
+                        <img [src]="item.postedBy.profilePic" alt="profileImg">
+                    </div>
+                    <div class="userName">
+                        <a (click)="otherProfile(item.postedBy._id)"> {{item.postedBy.username}} </a>
+                    </div>
                 </div>
-                <div class="userName mt-2">
-                    <a (click)="otherProfile(item.postedBy._id)"> {{item.postedBy.username}} </a>
-                </div>
-            </div>
 
-            <div class="post">
-                <img [src]="item.image" alt="Post">
-            </div>
-            <div class="postlike d-flex align-items-center justify-content-between mt-2" style="width: 110px;">
-                <div class="like">
-                    <button (click)="likeBtn(item._id,item.postedBy._id)">
-                        <span [ngClass]="{'liked': item.postedBy._id === 'userId' }" class="like-icon"></span>
-                        <!-- <span class="like-icon"></span> -->
-                    </button>
+                <div class="post">
+                    <img [src]="item.image" alt="Post">
                 </div>
-                <div class="comments">
+                <div class="postlike d-flex align-items-center justify-content-between mt-2" style="width: 110px;">
                     <div class="like">
-                        <button (click)="commentAndPostViewing(item._id)">
-                            <span class="comment-icon"></span>
+                        <button (click)="likeBtn(item._id,item.postedBy._id)">
+                            <span [ngClass]="{'liked': item.postedBy._id === 'userId' }" class="like-icon"></span>
+                            <!-- <span class="like-icon"></span> -->
                         </button>
                     </div>
-                </div>
-                <div class="share">
-                    <div class="like">
-                        <button>
-                            <span class="share-icon"></span>
-                        </button>
+                    <div class="comments">
+                        <div class="like">
+                            <button (click)="commentAndPostViewing(item._id)">
+                                <span class="comment-icon"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="share">
+                        <div class="like">
+                            <button>
+                                <span class="share-icon"></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
+                <div class="postLikes"> {{item.likes.length}} likes </div>
+                <div class="postCaption">{{item.caption}}</div>
+                <div class="viewComment" *ngIf="item.comments.length > 1"><a
+                        (click)="commentAndPostViewing(item._id)">View
+                        all {{item.comments.length}} commment</a></div>
+                <div class="viewComment" *ngIf="item.comments.length === 1"><a
+                        (click)="commentAndPostViewing(item._id)">View commment</a></div>
+                <!-- <p>{{item.postedBy._id}}</p> -->
+                <div class="addComment ">
+                    <input type="text" placeholder="Add a comment" name="text" ngModel required>
+                    <button *ngIf="addCommentForm.value.text" (click)="commentAdding(item._id)">Post</button>
+                </div>
             </div>
-            <div class="postLikes"> {{item.likes.length}} likes </div>
-            <div class="postCaption">{{item.caption}}</div>
-            <div class="viewComment">view commment</div>
-            <!-- <p>{{item.postedBy._id}}</p> -->
-            <div class="addComment">
-                <form action="">
-                    <input type="text" placeholder="Add comment">
-                </form>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
