--- a/front-end/src/app/shared/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/shared/nav-bar/nav-bar.component.html
@@ -3,6 +3,25 @@
     <!-- Sidebar -->
     <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
         <div class="position-sticky">
+
+            <div class="nav-options list-group list-group-flush mx-2 mt-3">
+                <a [routerLink]="'/home'" outlet="primary"
+                    class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
+                    aria-current="true">
+                    <img style="width: 25px;" src="../../../assets/side-nav/home.png" alt="">
+                    <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Home</span>
+                </a>
+            </div>
+
+            <div class="nav-options list-group list-group-flush mx-2 mt-3">
+                <a [routerLink]="'/user-search'" outlet="primary"
+                    class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
+                    aria-current="true">
+                    <img style="width: 25px;" src="../../../assets/side-nav/search.png" alt="">
+                    <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Search</span>
+                </a>
+            </div>
+
             <div class="nav-options list-group list-group-flush mx-2 mt-3" *ngFor="let options of navigationItems">
                 <a [routerLink]="options.route" outlet="primary"
                     class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
@@ -19,7 +38,7 @@
                     <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Create</span>
                 </a>
             </div>
-            <div class="nav-options list-group list-group-flush mx-2 mt-3">
+            <div class="nav-options list-group list-group-flush mx-2 mt-3" [class.visible]="!isVisible">
                 <a [routerLink]="'/profile'" outlet="primary"
                     class="list-group-item list-group-item-action py-2 ripple d-flex align-items-center"
                     aria-current="true">
@@ -37,11 +56,7 @@
             </a>
         </div>
     </nav>
-    <!-- Sidebar -->
-
-    <!-- Navbar -->
-    <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <!-- Container wrapper -->
-    </nav>
-    <!-- Navbar -->
 </header>
+<!-- <div class="slide-in" [class.visible]="isVisible">
+    <app-side-nav></app-side-nav>
+</div> -->
