--- a/front-end/src/app/shared/post-viewing/post-viewing.component.css
+++ b/front-end/src/app/shared/post-viewing/post-viewing.component.css
@@ -1,10 +1,12 @@
 main {
-    width: 1300px;
-    height: 670px;
+    width: 1100px;
+    /* height: 670px; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
-    background-color: transparent !important;
+    overflow: hidden;
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    background-color: transparent;
 }
 
 .postImg {
@@ -12,10 +14,10 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
     text-align: center;
     overflow: hidden;
     object-fit: cover;
+    background-color: transparent;
 }
 
 .postImg img {
