--- a/front-end/src/app/shared/follow-unfollow-list/follow-unfollow-list.component.html
+++ b/front-end/src/app/shared/follow-unfollow-list/follow-unfollow-list.component.html
@@ -4,7 +4,7 @@
         <h6 *ngIf="followingHeading">Following</h6>
     </div>
     <!-- [(ngModel)]="searchValue" -->
-    <input class="mt-2" type="text" placeholder="Search"  (input)="searchOperation()">
+    <input class="mt-2" type="text" placeholder="Search" (input)="searchOperation()">
     <div class="top pe-2">
         <h1 *ngIf="followerList.length === 0">No followers</h1>
         <div class="list mt-2" *ngFor="let item of followerList">
@@ -20,8 +20,11 @@
                 <button *ngIf="followerHeading" (click)="removeFollower('removefollower',item._id)">Remove</button>
                 <button *ngIf="followingHeading" (click)="removeFollower('removefollowing',item._id)">Following</button>
             </div>
-            <div class="second" *ngIf="otherUserButtons  && item._id !== '65dd630ca00a9b25af97873b'">
+            <div class="second" *ngIf="otherUserButtons  && item._id !== userId && !item.following.includes(userId)">
                 <button>Following</button>
+            </div>
+            <div class="second" *ngIf="item.following.includes(userId) && item._id !== userId">
+                <button>Follow</button>
             </div>
         </div>
     </div>
