--- a/front-end/src/app/features/home-module/post/add-post/add-post.component.css
+++ b/front-end/src/app/features/home-module/post/add-post/add-post.component.css
@@ -1,14 +1,32 @@
+.topMain {
+    width: 500px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .main {
-    padding: 180px 180px;
+    border-radius: 50%;
+}
+
+.heading {
+    border-bottom: thin solid rgb(208, 208, 208);
 }
 
 a {
     text-decoration: none;
 }
 
+img {
+    width: 180px;
+    height: 180px;
+}
+
 /* Style the button to look like a button */
 .file-upload-button {
-    background-color: #E1306C;
+    /* background-color: #E1306C; */
     /* color: #fff; */
     border: none;
     padding: 10px 20px;
