--- a/front-end/src/app/shared/all-post/all-post.component.css
+++ b/front-end/src/app/shared/all-post/all-post.component.css
@@ -10,14 +10,14 @@ h1 {
 }
 
 .item {
-    /* background-color: #ddd; */
     text-align: center;
-    width: 230px;
-    height: 230px;
+    /* width: 250px; */
+    height: 250px;
     object-fit: cover;
     overflow: hidden;
 }
 
 .item img {
     width: 100%;
+    height: 100%;
 }
