--- a/front-end/src/app/shared/post-viewing/comments/comments.component.css
+++ b/front-end/src/app/shared/post-viewing/comments/comments.component.css
@@ -1,10 +1,30 @@
 main {
     display: flex;
+    height: 100%;
     flex-direction: column;
+    position: relative;
 }
 
 .author {
     border-bottom: thin solid rgb(225, 225, 225);
+}
+
+.options {
+    /* background-color: aqua; */
+    /* width: 30px; */
+    object-fit: cover;
+}
+
+
+.author img {
+    width: 50px;
+}
+
+.commentBox {
+    position: absolute;
+    bottom: 0;
+    background-color: lightblue;
+    overflow: scroll;
 }
 
 .commentText {
