--- a/front-end/src/app/shared/post-viewing/post-viewing.component.css
+++ b/front-end/src/app/shared/post-viewing/post-viewing.component.css
@@ -1,17 +1,33 @@
 main {
     width: 1100px;
-    /* height: 670px; */
+    max-height: 600px;
     display: flex;
     /* align-items: center; */
     justify-content: space-between;
     overflow: hidden;
-    /* background-color: rgba(0, 0, 0, 0.5); */
+    /* background-color: rgba(169, 23, 23, 0.5); */
     background-color: transparent;
+}
+
+.author {
+    border-bottom: thin solid rgb(225, 225, 225);
+}
+
+.options {
+    /* background-color: aqua; */
+    /* width: 30px; */
+    object-fit: cover;
+}
+
+
+.author img {
+    width: 50px;
 }
 
 .postImg {
     flex: 1;
     display: flex;
+    min-height: 500px;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -22,10 +38,46 @@ main {
 
 .postImg img {
     width: 100%;
+    height: 100%;
 }
 
+
+
 .comment {
+    min-height: 500px;
     flex: 1;
+    /* height: 100%; */
     /* background-color: lightcoral; */
-    height: 100%;
+    position: relative;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.commentBox {
+    position: absolute;
+    bottom: 0;
+    left: 550px;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: thin solid lightgray;
+
+}
+
+input {
+    flex: 1;
+    border: none;
+    padding: 15px 13px;
+}
+
+button {
+    border: none;
+    color: #007bff;
+    font-weight: 500;
+    background-color: white;
+}
+
+input:focus {
+    outline: none;
 }
