--- a/front-end/src/app/shared/post-viewing/post-viewing.component.html
+++ b/front-end/src/app/shared/post-viewing/post-viewing.component.html
@@ -1,8 +1,23 @@
 <main>
     <div class="postImg">
-        <img [src]="profilePic" alt="post-img">
+        <img [src]="postPic" alt="post-img">
     </div>
     <div class="comment">
+        <div class="author p-2 d-flex align-items-center justify-content-between">
+            <div class="authorDetails d-flex">
+                <img class="rounded-circle me-3" [src]="userPofilePic" alt="">
+                <p class="mt-3">{{userName}}</p>
+            </div>
+            <div class="options">
+                <img src="../../../../assets/post/3-dots.png" style="width: 15px;" (click)="postEdit()" role="button" alt="">
+            </div>
+        </div>
         <app-comments [id]="data.id" [comments]="allComments"></app-comments>
     </div>
+    <form action="" #addCommentForm="ngForm">
+        <div class="commentBox">
+            <input type="text" placeholder="Add a comment" name="text" ngModel>
+            <button class="me-2" *ngIf="addCommentForm.value.text" (click)="commentAdding()">post</button>
+        </div>
+    </form>
 </main>
